2007-03-27  Matthew Barnes  <mbarnes@redhat.com>

	* e-table/gal-a11y-e-cell-text.c:
	* e-table/gal-a11y-e-cell-vbox.c:
	Don't mix declarations and code (#405495).

2007-03-20  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #419524

	* Include <glib/i18n.h> instead of <libgnome/gnome-i18n.h>.

2007-03-01  Kjartan Maraas  <kmaraas@gnome.org>

	* e-table/gal-a11y-e-cell-tree.c: (kill_view_cb),
	(ectr_subcell_weak_ref), (gal_a11y_e_cell_tree_new):
	Workaround for crash in bug #330728. Patch from
	Caolan McNamara.

2007-01-24  Wang Xin  <jedy.wang@sun.com>

	* e-text/gal-a11y-e-text.c: Fixes #400121.

2006-09-18  Matthew Barnes  <mbarnes@redhat.com>

	Fixes #351332

	* calendar/ea-gnome-calendar.c:
	Fix implicit function declarations.

2006-09-18  Matthew Barnes  <mbarnes@redhat.com>

	Fixes #353472

	* widgets/ea-calendar-cell.c: (ea_calendar_cell_finalize)
	* calendar/ea-week-view-cell.c: (ea_week_view_cell_finalize)
	* calendar/ea-day-view-cell.c: (ea_day_view_cell_finalize)
	* calendar/ea-cal-view-event.c: (ea_cal_view_finalize)
	* e-table/gal-a11y-e-cell-registry.c:
	(gal_a11y_e_call_registry_finalize)
	Chain up to parent's finalize() method.

2006-08-17  Li Yuan <li.yuan@sun.com>

	Patch submitted by Pavel Roskin <proski@gnu.org>

	* widgets/ea-expander.h:
	Fix warning about ignored token after #endif.

2006-08-16  Kjartan Maraas  <kmaraas@gnome.org>

	* calendar/ea-cal-view-event.c: (ea_cal_view_event_get_name):
	Don't leak summary_string here.

2006-07-13  Andre Klapper  <a9016009@gmx.de>

	* calendar/ea-day-view.c: Added translator comments to
	some strings. Fixes bug #331016. Thanks to Boby Wang.

2006-06-22  Harish Krishnaswamy  <kharish@novell.com>

	* e-table/gal-a11y-e-cell-text.c: (ect_check):
	Revert Rajeev's patch for #330728, #332727..

2006-06-12  Li Yuan <li.yuan@sun.com>

	* Makefile.am, e-table/Makefile.am,
	e-text/Makefile.am: Do not install header files, and make sure
	they will be included in the tarball when make dist.
